--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^7.2.4",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
-    "stripe": "^10.3.0"
+    "stripe": "^10.3.0",
+    "validator": "^13.9.0"
   }
 }
