--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
   "dependencies": {
     "colors": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-rate-limit": "^6.5.2",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "mongoose": "^7.2.4",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.8",
     "nodemon": "^2.0.19",
     "stripe": "^10.3.0",
